--- a/Examples/ObjC/Sources/SCRecorderExamples-Info.plist
+++ b/Examples/ObjC/Sources/SCRecorderExamples-Info.plist
@@ -39,5 +39,11 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>测试</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>测试</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>测试</string>
 </dict>
 </plist>
